GET method functional :PP

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <html>
 
 <head>
-  <title>Sample</title>
+  <title>Gale Dashboard</title>
 </head>
 
 <body>
-  <h1>Hello, world!</h1>
-  <a href="./sample.html">Sample page</a>
-</body>
-
+  <h1>Gale Dashboard</h1>
+  <a href="sample1/index.html">Sample 1</a>
+  <a href="sample2/index.html">Sample 2</a>
 </html>
