--- a/public/sample1/index.html
+++ b/public/sample1/index.html
@@ -1,16 +1,14 @@
 <html>
+  <head>
+    <title>Sample #1</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="js/time.js"></script>
+  </head>
 
-<head>
-  <title>Sample #1</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="js/time.js"></script>
-</head>
-
-<body>
-  <a href="../index.html">DASHBOARD</a>
-  <h1>Hello, world! #1</h1>
-  <a href="./sample.html">Sample page #1</a>
-  <p id="time">Empty</p>
-</body>
-
+  <body>
+    <a href="../index.html">DASHBOARD</a>
+    <h1>Hello, world! #1</h1>
+    <a href="./sample.html">Sample page #1</a>
+    <p id="time">Empty</p>
+  </body>
 </html>
