--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   <h1>Gale Dashboard</h1>
   <a href="sample1/index.html">Sample 1</a>
   <a href="sample2/index.html">Sample 2</a>
+  <a href="gmsgarcia.pt/">gmsgarcia.pt</a>
 
 </html>
